--- a/main.scss
+++ b/main.scss
@@ -87,7 +87,10 @@ header {
     }
   
     p {
-      margin: 0;
+      margin-top: 10px;
+      margin-right: 450px;
+      display: flex;
+      flex-direction: column;
     }
   }
 
