funcionalidad de orderBy

--- a/style.css
+++ b/style.css
@@ -68,4 +68,8 @@ header .principal-title h1 {
   flex-direction: column;
 }
 
+.hidden {
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
