--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+$color-principal: red;
+// $selectores-del-buscador:(
+//   font-size: 13px,
+//   font-weight: bold,
+//   letter-spacing: 1px,
+//   text-transform: uppercase,
+//   color: #757575,
+//   margin-right: 10px,
+//   );
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    
 }
-
 header {
     background-color: black;
     display: flex;
@@ -26,7 +34,6 @@ header {
         }
     }
 }
-
 .banner {
     width: 100%;
     min-height: 400px;
@@ -35,58 +42,54 @@ header {
     position: relative;
 }
 
-// article{
-//     width: 250px;
-//     height: 350px;
-//     background-color: black;
-//     display: flex;
-//     margin-left: 10px;
-//     margin-top: 100px;
+.section-search {
+  margin: 60px 10px 80px;
+  .searchText {
+    border: 0;
+    border-bottom: 2px solid #151515;
+    width: 450px;
+    padding: 5px 35px;
+    border-radius: 0;
+    font-size: 26px;
+    box-sizing: border-box;
+  }
+  // .select-type {
+  //   $selectores-del-buscador;
+  // }
 
-//    .card {
-//     height: 100%;
-//     box-sizing: border-box;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     color: white;
-//     .imagen{
-//         height: 100px;
-//         width: 50px;
-//     }
-//   } 
-// }
+  // .selectSearch{
+  //   $selectores-del-buscador;
+  // }
+  
+}
 
 .resultados {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     .card {
-      width: 600px;
-      height: 230px;
-      background-color: #333333;
-      border-radius: 20px;
+      width: 200px;
+      // height: 400px;
+      background-color: #151515;
       color: #fff;
       display: flex;
-      margin: 20px;
-  
+      flex-direction: column;
+      align-content: space-between;
+      justify-content: center;
+      margin-top: 10px;
+      margin-right: 10px;
       .imagen {
-        width: 40%;
+        width: 100%;
+        height: auto;
         overflow: hidden;
-        img {
-          width: 100%;
-          height: auto;
-        }
       }
-  
-      .info {
-        padding: 20px;
-        .estado {
-          display: flex;
-        }
+      .container-name {
+        height: 100px;
+      }
+      h3 {
+        margin-left: 10px;
       }
     }
-  
     p {
       margin-top: 10px;
       margin-right: 450px;
