--- a/style.css
+++ b/style.css
@@ -34,32 +34,45 @@ header .principal-title h1 {
   position: relative;
 }
 
+.section-search {
+  margin: 60px 10px 80px;
+}
+.section-search .searchText {
+  border: 0;
+  border-bottom: 2px solid #151515;
+  width: 450px;
+  padding: 5px 35px;
+  border-radius: 0;
+  font-size: 26px;
+  box-sizing: border-box;
+}
+
 .resultados {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .resultados .card {
-  width: 600px;
-  height: 230px;
-  background-color: #333333;
-  border-radius: 20px;
+  width: 200px;
+  background-color: #151515;
   color: #fff;
   display: flex;
-  margin: 20px;
+  flex-direction: column;
+  align-content: space-between;
+  justify-content: center;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 .resultados .card .imagen {
-  width: 40%;
-  overflow: hidden;
-}
-.resultados .card .imagen img {
   width: 100%;
   height: auto;
+  overflow: hidden;
 }
-.resultados .card .info {
-  padding: 20px;
+.resultados .card .container-name {
+  height: 100px;
 }
-.resultados .card .info .estado {
-  display: flex;
+.resultados .card h3 {
+  margin-left: 10px;
 }
 .resultados p {
   margin-top: 10px;
